--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,7 @@
     <string name="search_bar">search_bar</string>
     <string name="search_hint">Search for Animals</string>
     <string name="speech_button">Tap</string>
+    <string name="plan_text">Plan</string>
+
 
 </resources>
