--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="search_hint">Search for Animals</string>
     <string name="speech_button">Tap</string>
     <string name="plan_text">Plan</string>
+    <string name="exhibits_selected">Exhibits Selected:</string>
+    <string name="exhibit_counter">0</string>
 
 
 </resources>
